Corregidos bugs y mejoras
